第三次提交（增加已办任务）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ThanksGivingHall</string>
-    <string name="app_title">华夏感恩堂办公系统</string>
+    <string name="app_title">礼煜明德办公系统</string>
     <string name="app_introduce">仁者爱人、义利并举、崇德向善、尊道贵德</string>
     <string name="user">请输入用户名</string>
     <string name="password">请输入密码</string>
