--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,12 @@
     <string name="login_activity_loading_null">数据为空</string>
     <string name="login_activity_loginfail_toast">访问服务器异常</string>
     <string name="login_activity_loading_fail_toast">数据获取失败</string>
+    <string name="task_reply_fail_toast">任务回复失败</string>
     <string name="update_pw_fail">更新密码失败</string>
 
 
     <string name="null_title">标题不能为空</string>
-    <string name="null_content">通知内容不能为空</string>
+    <string name="null_content">内容不能为空</string>
     <string name="null_receUserIds">接收人不能为空</string>
 
 </resources>
