第一次提交（模版）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ThanksGivingHall</string>
+    <string name="app_name">礼煜明德办公系统</string>
     <string name="app_title">礼煜明德办公系统</string>
     <string name="app_introduce">仁者爱人、义利并举、崇德向善、尊道贵德</string>
     <string name="user">请输入用户名</string>
